palign fix commit

--- a/css/responsive-portfolio.css
+++ b/css/responsive-portfolio.css
@@ -473,7 +473,7 @@ aside {
 
 .palign {
   
-  padding: 20px 30px 20px 30px;
+  padding: 20px 0px 20px 0px;
   text-align: left;
 }
 
